Ajout de la documentation dans ReviewController et UserController
