# app/Http/Controllers/ReviewController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use OpenApi\Attributes as OA;
 use App\Models\Review;
 use Exception;
 use Illuminate\Database\Eloquent\ModelNotFoundException;
@@ -9,6 +10,29 @@ use Illuminate\Database\QueryException;
 
 class ReviewController extends Controller
 {
+    #[OA\Delete(
+        path: '/api/reviews/{id}',
+        summary: 'Supprimer une critique par ID',
+        description: 'Supprimer une critique',
+        tags: ['Review'],
+        parameters: [
+            new OA\Parameter(
+                name: 'id',
+                in: 'path',
+                required: true,
+            )
+        ],
+        responses: [
+            new OA\Response(
+                response: 204,
+                description: 'Critique supprimé',
+            ),
+            new OA\Response(
+                response: 404,
+                description: 'Critique non trouvée'
+            )
+        ]
+    )]
     public function destroy(string $id) {
         try {
             $review = Review::findOrFail($id);
